Change log for 2.1.0
Add

* New tutorial file
* Upgrade file: installation/upgrade_210.html
* New Library: migration Class

Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/userguide.css
+++ b/userguide.css
@@ -417,6 +417,7 @@ form {
 .label {
   padding: 1px 3px 2px;
   font-weight: bold;
+  font-size: 9.75px;
   color: #ffffff;
   text-transform: uppercase;
   white-space: nowrap;
